name:                Gander
version:             0.1.1.0
synopsis:            The "Git ANnex DEdupeR"
description:         Deduplicates large numbers of files using git-annex
license:             LGPL-3
-- license-file:        LICENSE
author:              Jeff Johnson
maintainer:          jefdaj@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10
data-files:          usage.txt

executable gander
  ghc-options:         -Wall
  main-is:             Gander.hs
  other-modules:       Gander.Cmd,
                       Gander.Cmd.Hash,
                       Gander.Cmd.AnnexHash,
                       Gander.Cmd.Diff,
                       Gander.Cmd.Dupes,
                       Gander.Cmd.Test,
                       Gander.Cmd.Update,
                       Gander.Cmd.Annex,
                       Gander.Cmd.Rm,
                       Gander.Cmd.Dedup,
                       Gander.Config,
                       Gander.Lib,
                       Gander.Lib.Git,
                       Gander.Lib.Hash,
                       Gander.Lib.HashTree,
                       Gander.Lib.Delta,
                       Gander.Lib.DupeMap
  build-depends:       base,
                       bytestring,
                       containers,
                       cryptohash,
                       docopt,
                       directory,
                       directory-tree,
                       filepath,
                       Glob,
                       unix,
                       pretty-simple,
                       process,
                       ansi-terminal,
                       MissingH,
                       attoparsec,
                       split
  default-language:    Haskell2010
