name:                Gander
version:             0.1.2.0
synopsis:            The "Git ANnex DEdupeR"
description:         Deduplicates large numbers of files using git-annex
license:             LGPL-3
-- license-file:        LICENSE
author:              Jeff Johnson
maintainer:          jefdaj@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10
data-files:          usage.txt

executable gander
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is:             Gander.hs
  other-modules:       Gander.Cmd,
                       Gander.Cmd.Init,
                       Gander.Cmd.Hash,
                       Gander.Cmd.Diff,
                       Gander.Cmd.Dupes,
                       Gander.Cmd.Test,
                       Gander.Cmd.Update,
                       Gander.Cmd.Add,
                       Gander.Cmd.Rm,
                       Gander.Cmd.Mv,
                       Gander.Cmd.Dedup,
                       Gander.Config,
                       Gander.Lib,
                       Gander.Run,
                       Gander.Lib.Hash,
                       Gander.Lib.HashTree,
                       Gander.Lib.Delta,
                       Gander.Lib.DupeMap,
                       Gander.Util
  build-depends:       base,
                       bytestring,
                       containers,
                       cryptohash,
                       docopt,
                       directory,
                       directory-tree,
                       filepath,
                       Glob,
                       unix,
                       pretty-simple,
                       process,
                       ansi-terminal,
                       MissingH,
                       attoparsec,
                       split
  default-language:    Haskell2010
