name:                Gander
version:             0.1.3.0
synopsis:            The "Git ANnex DEdupeR"
description:         Deduplicates large numbers of files using git-annex
license:             LGPL-3
-- license-file:        LICENSE
author:              Jeff Johnson
maintainer:          jefdaj@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10
data-files:          usage.txt

library
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base,
                       Glob,
                       ansi-terminal,
                       attoparsec,
                       byteable,
                       bytestring,
                       streaming,
                       streaming-bytestring,
                       unordered-containers,
                       hashable,
                       cryptonite,
                       -- cryptohash,
                       directory,
                       directory-tree,
                       docopt,
                       filepath,
                       monad-parallel,
                       pretty-simple,
                       process,
                       split,
                       unix
  exposed-modules:     Gander.Cmd,
                       Gander.Cmd.Init,
                       Gander.Cmd.Hash,
                       Gander.Cmd.Diff,
                       Gander.Cmd.Dupes,
                       Gander.Cmd.Test,
                       Gander.Cmd.Update,
                       Gander.Cmd.Add,
                       Gander.Cmd.Rm,
                       Gander.Cmd.Mv,
                       Gander.Cmd.Dedup,
                       Gander.Config,
                       Gander.Data,
                       Gander.Run,
                       Gander.Data.Hash,
                       Gander.Data.HashTree,
                       Gander.Data.Delta,
                       Gander.Data.DupeMap,
                       Gander.Util,
                       System.Directory.Tree

executable gander
  default-language:    Haskell2010
  -- TODO which of these are actually needed for efficiency?
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Gander.hs
  build-depends:       base,
                       Gander,
                       Glob,
                       ansi-terminal,
                       attoparsec,
                       byteable,
                       bytestring,
                       streaming,
                       streaming-bytestring,
                       unordered-containers,
                       hashable,
                       cryptonite,
                       -- cryptohash,
                       directory,
                       directory-tree,
                       docopt,
                       filepath,
                       monad-parallel,
                       pretty-simple,
                       process,
                       split,
                       unix
  other-modules:       Gander.Cmd,
                       Gander.Cmd.Init,
                       Gander.Cmd.Hash,
                       Gander.Cmd.Diff,
                       Gander.Cmd.Dupes,
                       Gander.Cmd.Test,
                       Gander.Cmd.Update,
                       Gander.Cmd.Add,
                       Gander.Cmd.Rm,
                       Gander.Cmd.Mv,
                       Gander.Cmd.Dedup,
                       Gander.Config,
                       Gander.Data,
                       Gander.Run,
                       Gander.Data.Hash,
                       Gander.Data.HashTree,
                       Gander.Data.Delta,
                       Gander.Data.DupeMap,
                       Gander.Util,
                       System.Directory.Tree

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Gander,
                       hspec,
                       QuickCheck
