name:                gander
version:             0.1.0.0
synopsis:            The "Git ANnex DEdupeR"
description:         Deduplicates large numbers of files using git-annex
license:             LGPL-3
-- license-file:        LICENSE
author:              Jeff Johnson
maintainer:          jefdaj@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          usage.txt

executable gander
  ghc-options:         -Wall
  main-is:             gander.hs
  build-depends:       base,
                       bytestring,
                       containers,
                       cryptohash,
                       docopt,
                       directory-tree,
                       filepath,
                       unix
  default-language:    Haskell2010
  other-modules:       Paths_gander
