cabal-version:       3.0
name:                gander
version:             0.2.0.0
synopsis:            The "Git ANnex DEdupeR"
description:         Deduplicates large numbers of files using git-annex
license:             LGPL-3.0-only
author:              Jeff Johnson
maintainer:          jefdaj@protonmail.ch
build-type:          Simple

common deps
  default-language:    Haskell2010
  hs-source-dirs:      lib

  -- TODO which of these are actually needed for efficiency?
  ghc-options:         -Wall -O2
  -- cc-options:          -static
  -- ld-options:          -static -pthread

  build-depends:       base,
                       Glob,
                       ansi-terminal,
                       attoparsec,
                       byteable,
                       base64-bytestring,
                       bytestring,
                       deepseq,
                       safe-exceptions,
                       streaming,
                       streaming-bytestring,
                       unordered-containers,
                       hashable,
                       cryptonite,
                       hashtables,
                       -- cryptohash,
                       directory,
                       directory-tree,
                       docopt,
                       filepath,
                       massiv,
                       monad-parallel,
                       pretty-simple,
                       process,
                       split,
                       store,
                       text,
                       th-utilities,
                       unix

library
  import:              deps
  default-language:    Haskell2010
--   exposed-modules:     Gander.Cmd,
--                        Gander.Cmd.Add,
--                        Gander.Cmd.Dedup,
--                        Gander.Cmd.Diff,
--                        Gander.Cmd.Dupes,
--                        Gander.Cmd.Hash,
--                        Gander.Cmd.Init,
--                        Gander.Cmd.Mv,
--                        Gander.Cmd.Rm,
--                        Gander.Cmd.Test,
--                        Gander.Cmd.Update,
--                        Gander.Config,
                       -- Gander.Run,
                       -- Gander.Util,
  exposed-modules:     Data.Gander,
                       Data.Gander.Delta,
                       Data.Gander.DupeMap,
                       Data.Gander.Hash,
                       Data.Gander.HashTree,
                       Util,
                       System.Directory.Tree

executable gander
  import:              deps
  default-language:    Haskell2010
  hs-source-dirs:      lib, app
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  main-is:             Gander.hs
  build-depends:       gander,
                       setlocale
  other-modules:       Gander.Cmd,
                       Gander.Cmd.Add,
                       Gander.Cmd.Dedup,
                       Gander.Cmd.Diff,
                       Gander.Cmd.Dupes,
                       Gander.Cmd.Hash,
                       Gander.Cmd.Init,
                       Gander.Cmd.Mv,
                       Gander.Cmd.Rm,
                       Gander.Cmd.Test,
                       Gander.Cmd.Update,
                       Gander.Config,
                       Data.Gander,
                       Data.Gander.Delta,
                       Data.Gander.DupeMap,
                       Data.Gander.Hash,
                       Data.Gander.HashTree,
                       Gander.Run,
                       Util,
                       System.Directory.Tree

test-suite test
  import:              deps
  default-language:    Haskell2010
  hs-source-dirs:      lib, app, test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       gander,
                       HUnit,
                       QuickCheck,
                       utf8-string,
                       hspec,
                       quickcheck-instances,
                       quickcheck-unicode,
                       tasty,
                       tasty-discover,
                       tasty-hspec,
                       tasty-hunit,
                       tasty-quickcheck,
                       temporary
  other-modules:       Data.Gander.Hash,
                       Data.Gander.Delta,
                       Data.Gander.HashTree,
                       Gander.Config,
                       System.Directory.Tree,
                       Util,
                       CmdTest,
                       DeltaTest,
                       DupeSetTest,
                       HashTest,
                       HashTreeTest,
                       FileNameTest,
                       RunTest,
                       UtilTest
